[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-redis = "*"
actix-session = "*"
actix-web = "*"
actix-web-httpauth = "*"
aseprite = "*"
assets_manager = "*"
async-graphql = "*"
async-std = "*"
async-trait = "*"
azul = "*"
backtrace = "*"
basis-universal = "*"
beehive = "*"
building-blocks = "*"
bitflags = "*"
bson = "*"
cfg-if = "*"
chrono = "*"
clap = "*"
color-eyre = "*"
config = "*"
console_engine = "*"
const-tweaker = "*"
cookie = "*"
crossbeam-channel = "*"
crossbeam-utils = "*"
curl = "*"
cxx-qt = "*"
density-mesh-core = "*"
diesel = "*"
dioxus = "*"
dirs = "*"
distill = "*"
dominator = "*"
dotenv = "*"
druid = "*"
egui = "*"
either = "*"
env_logger = "*"
flame = "*"
fltk = "*"
flutter_rust_bridge = "*"
futures = "*"
futures-channel = "*"
futures-core = "*"
futures-io = "*"
futures-macro = "*"
futures-sink = "*"
futures-task = "*"
futures-util = "*"
h2 = "*"
hex = "*"
http = "*"
httparse = "*"
humansize = "*"
hyper = "*"
iced = "*"
image = "*"
imageproc = "*"
imgui = "*"
itertools = "*"
jsonwebtoken = "*"
juniper = "*"
lapack = "*"
lapack-sys = "*"
lazy_static = "*"
libc = "*"
libssh2-sys = "*"
log = "*"
log4rs = "*"
lru-cache = "*"
matches = "*"
mockito = "*"
ndarray = "*"
ndarray-linalg = "*"
ndarray-rand = "*"
ndarray-stats = "*"
num = "*"
num-bigint = "*"
num-complex = "*"
num-derive = "*"
num-integer = "*"
num-iter = "*"
num-rational = "*"
num-traits = "*"
num_cpus = "*"
ordered-float = "*"
os_pipe = "*"
os_str_bytes = "*"
petgraph = "*"
ppv-lite86 = "*"
pretty_env_logger = "*"
proc-macro2 = "*"
python = "*"
quickcheck = "*"
quote = "*"
rand = "*"
rand_chacha = "*"
rand_core = "*"
rayon = "*"
redis = "*"
redox_syscall = "*"
redox_termios = "*"
regex = "*"
regex-syntax = "*"
remove_dir_all = "*"
reqwest = "*"
rusoto_core = "*"
rusoto_s3 = "*"
rustls = "*"
ryu = "*"
seed = "*"
semver = "*"
semver-parser = "*"
serde = "*"
serde_bytes = "*"
serde_yaml = "*"
sha-1 = "*"
sha2 = "*"
signal-hook = "*"
signal-hook-registry = "*"
simplelog = "*"
sized-chunks = "*"
slab = "*"
slint = "*"
smallvec = "*"
stable_deref_trait = "*"
strsim = "*"
structopt = "*"
syn = "*"
tempfile = "*"
time = "*"
tokio = "*"
tokio-cron = "*"
tokio-io = "*"
tokio-process = "*"
tokio-rustls = "*"
tokio-serial = "*"
tokio-socks = "*"
tokio-stream = "*"
tokio-sync = "*"
tokio-tcp = "*"
tokio-threadpool = "*"
tokio-timer = "*"
tokio-tls = "*"
tokio-tower = "*"
tokio-tungstenite = "*"
tokio-udp = "*"
tokio-uds = "*"
toml = "*"
tower-balance = "*"
tower-buffer = "*"
tower-discover = "*"
tower-limit = "*"
tower-load-shed = "*"
tower-retry = "*"
tower-timeout = "*"
tower-util = "*"
tower-web = "*"
typenum = "*"
unic-ucd-core = "*"
unic-ucd-name = "*"
unic-ucd-normal = "*"
unicase = "*"
unicode-normalization = "*"
unicode-width = "*"
url = "*"
uuid = "*"
v_escape = "*"
vcpkg = "*"
vec_rand = "*"
void = "*"
warp = "*"
wasm-bindgen = "*"
webpki = "*"
webpki-roots = "*"
webrender = "*"
winapi = "*"
winapi-i686-pc-windows-gnu = "*"
winapi-util = "*"
winapi-x86_64-pc-windows-gnu = "*"
ws2_32-sys = "*"
xdg = "*"
xml-rs = "*"
yaml-rust = "*"
yansi = "*"
yew = "*"
zip = "*"
zmq = "*"
zmq-rs = "*"
zstd = "*"
