[package]
name = "hello_world"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
alacritty_terminal = "0.25.0"
any_vec = "0.14.0"
anyhow = "1.0.97"
arrayvec = "0.7.6"
ashpd = "0.11.0"
async-compat = "0.2.4"
async-compression = "0.4.21"
async-dispatcher = "0.1.2"
async-fs = "2.1.2"
async-pipe = "0.1.3"
async-recursion = "1.1.1"
async-tar = "0.5.0"
async-trait = "0.1.88"
async-tungstenite = "0.29.1"
async-watch = "0.3.1"
async_zip = "0.0.17"
aws-config = "1.6.0"
aws-credential-types = "1.2.2"
aws-sdk-bedrockruntime = "1.77.0"
aws-smithy-runtime-api = "1.7.4"
aws-smithy-types = "1.3.0"
base64 = "0.22.1"
bevy-glsl-to-spirv = "0.2.1"
bitflags = "2.9.0"
blade-graphics = "0.6.0"
blade-macros = "0.3.0"
blade-util = "0.2.0"
blake3 = "1.7.0"
bytes = "1.10.1"
cargo_metadata = "0.19.2"
cargo_toml = "0.22.1"
chrono = "0.4.40"
circular-buffer = "1.1.0"
clap = "4.5.32"
convert_case = "0.8.0"
core-foundation = "0.10.0"
core-foundation-sys = "0.8.7"
ctor = "0.4.1"
dap-types = "0.0.1"
dashmap = "6.1.0"
derive_more = "2.0.1"
dirs = "6.0.0"
ec4rs = "1.1.1"
emojis = "0.6.4"
env_logger = "0.11.7"
exec = "0.3.1"
fancy-regex = "0.14.0"
floem = "0.2.0"
fork = "0.2.0"
futures = "0.3.31"
futures-batch = "0.6.1"
futures-lite = "2.6.0"
git2 = "0.20.1"
globset = "0.4.16"
handlebars = "6.3.2"
hashbrown = "0.15.2"
heed = "0.22.0"
hex = "0.4.3"
html5ever = "0.30.0"
http = "1.3.1"
hyper = "1.6.0"
image = "0.25.5"
imara-diff = "0.1.8"
indexmap = "2.8.0"
indoc = "2.0.6"
inkjet = "0.11.1"
inventory = "0.3.20"
itertools = "0.14.0"
itoa = "1.0.15"
jni-android-sys = "0.0.10"
jsonwebtoken = "9.3.1"
jupyter-protocol = "0.6.0"
jupyter-websocket-client = "0.9.0"
libc = "0.2.171"
libsqlite3-sys = "0.32.0"
linkify = "0.10.0"
linkme = "0.3.32"
livekit = "0.7.8"
log = "0.4.26"
markup5ever_rcdom = "0.3.0"
memchr = "2.7.4"
naga = "24.0.0"
nanoid = "0.4.0"
nbformat = "0.10.0"
nix = "0.29.0"
nixel = "5.2.0"
num = "0.4.3"
num-format = "0.4.4"
num-traits = "0.2.19"
once_cell = "1.21.1"
ordered-float = "5.0.0"
palette = "0.7.6"
parking_lot = "0.12.3"
pathdiff = "0.2.3"
pet = "0.0.1"
postage = "0.5.0"
pretty_assertions = "1.4.1"
proc-macro2 = "1.0.94"
profiling = "1.0.16"
promptput = "0.1.1"
prost = "0.13.5"
prost-build = "0.13.5"
prost-types = "0.13.5"
pulldown-cmark = "0.13.0"
quote = "1.0.40"
rand = "0.9.0"
rand_core = "0.9.3"
rayon = "1.10.0"
regex = "1.11.1"
repair_json = "0.1.0"
reqwest = "0.12.15"
rsa = "0.9.8"
rust-embed = "8.6.0"
rust_decimal = "1.37.1"
rustack = "0.1.0"
rustc-demangle = "0.1.24"
rustc-hash = "2.1.1"
rustls = "0.23.25"
rustls-platform-verifier = "0.5.1"
schemars = "0.8.22"
semver = "1.0.26"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
serde_json_lenient = "0.2.4"
serde_repr = "0.1.20"
sha2 = "0.10.8"
shellexpand = "3.1.0"
shlex = "1.3.0"
signal-hook = "0.3.17"
simplelog = "0.12.2"
smallvec = "1.14.0"
smol = "2.0.2"
sqlformat = "0.3.5"
streaming-iterator = "0.1.9"
strsim = "0.11.1"
strum = "0.27.1"
subtle = "2.6.1"
syn = "2.0.100"
sys-locale = "0.3.2"
sysinfo = "0.33.1"
take-until = "0.2.0"
tempfile = "3.19.1"
thiserror = "2.0.12"
tiktoken-rs = "0.6.0"
time = "0.3.40"
tiny_http = "0.12.0"
tokio = "1.44.1"
toml = "0.8.20"
tower-http = "0.6.2"
tree-sitter-bash = "0.23.3"
tree-sitter-c = "0.23.4"
tree-sitter-cpp = "0.23.4"
tree-sitter-css = "0.23.2"
tree-sitter-elixir = "0.3.4"
tree-sitter-embedded-template = "0.23.2"
tree-sitter-gitcommit = "0.3.3"
tree-sitter-go = "0.23.4"
tree-sitter-parsers = "0.0.5"
unicase = "2.8.1"
unicode-script = "0.5.7"
unicode-segmentation = "1.12.0"
unindent = "0.2.4"
url = "2.5.4"
urlencoding = "2.1.3"
uuid = "1.16.0"
wasm-encoder = "0.227.1"
wasmparser = "0.227.1"
wasmtime = "31.0.0"
wasmtime-wasi = "31.0.0"
which = "7.0.2"
wit-component = "0.227.1"
zed_llm_client = "0.4.1"
zstd = "0.13.3"
