[package]
name = "hello_world"
version = "0.1.0"
edition = "2024"

[dependencies]
accel = "0.3.1"
actix = "0.13.5"
actix-web = "4.10.2"
ai-dataloader = "0.6.2"
alacritty_terminal = "0.25.0"
any_vec = "0.14.0"
anyhow = "1.0.97"
arff = "0.3.0"
argmin = "0.10.0"
arrayfire = "3.8.0"
arrayvec = "0.7.6"
arrow = "55.1.0"
ascending_graphics = "0.25.0"
ashpd = "0.11.0"
async-compat = "0.2.4"
async-compression = "0.4.21"
async-dispatcher = "0.1.2"
async-fs = "2.1.2"
async-pipe = "0.1.3"
async-recursion = "1.1.1"
async-std = "1.13.1"
async-tar = "0.5.0"
async-task = "4.7.1"
async-trait = "0.1.88"
async-tungstenite = "0.29.1"
async-watch = "0.3.1"
async_zip = "0.0.17"
aws-config = "1.6.0"
aws-credential-types = "1.2.2"
aws-sdk-bedrockruntime = "1.77.0"
aws-smithy-runtime-api = "1.7.4"
aws-smithy-types = "1.3.0"
azul = "0.1.0"
azure = "0.38.0"
base64 = "0.22.1"
bevy-glsl-to-spirv = "0.2.1"
bio = "2.3.0"
bitflags = "2.9.0"
blade-graphics = "0.6.0"
blade-macros = "0.3.0"
blade-util = "0.2.0"
blake3 = "1.7.0"
blas = "0.23.0"
blit = "0.8.5"
blue_engine = "0.9.1"
bvh = "0.11.0"
bytes = "1.10.1"
cake = "0.1.0"
candle-core = "0.9.1"
cargo_metadata = "0.19.2"
cargo_toml = "0.22.1"
cgmath = "0.18.0"
chrono = "0.4.40"
circular-buffer = "1.1.0"
clap = "4.5.32"
clipline = "0.3.0"
clustering = "0.2.1"
coaster = "0.2.0"
cobyla = "0.6.0"
cogset = "0.2.0"
collenchyma = "0.0.8"
convert_case = "0.8.0"
core-foundation = "0.10.0"
core-foundation-sys = "0.8.7"
crow = "0.7.2"
csv = "1.3.1"
ctor = "0.4.1"
cublas = "0.2.0"
cuda_std = "0.2.2"
cudnn = "1.3.1"
cushy = "0.4.0"
daggy = "0.9.0"
dap-types = "0.0.1"
darwin-rs = "0.4.0"
dashmap = "6.1.0"
derive_more = "2.0.1"
dfdx = "0.13.0"
diesel = "2.2.11"
dirs = "6.0.0"
dominator = "0.5.38"
ec4rs = "1.1.1"
egui = "0.31.1"
emojis = "0.6.4"
emu_core = "0.1.1"
env_logger = "0.11.7"
euclid = "0.22.11"
exec = "0.3.1"
faiss = "0.12.1"
fancy-regex = "0.14.0"
femtovg = "0.14.1"
finalfusion = "0.18.0"
floem = "0.2.0"
flutter_rust_bridge = "2.10.0"
forester = "0.0.3"
fork = "0.2.0"
frug = "0.2.7"
fui = "2.1.0"
futures = "0.3.31"
futures-batch = "0.6.1"
futures-lite = "2.6.0"
gemgui = "0.4.6"
gemini-engine = "1.2.0"
genetic = "0.2.1"
git2 = "0.20.1"
globset = "0.4.16"
handlebars = "6.3.2"
hashbrown = "0.15.2"
heed = "0.22.0"
hex = "0.4.3"
html5ever = "0.30.0"
http = "1.3.1"
hyper = "1.6.0"
image = "0.25.5"
imara-diff = "0.1.8"
indexmap = "2.8.0"
indicatif = "0.17.12"
indoc = "2.0.6"
inkjet = "0.11.1"
inventory = "0.3.20"
itertools = "0.14.0"
itoa = "1.0.15"
jni-android-sys = "0.0.10"
jsonwebtoken = "9.3.1"
jupyter-protocol = "0.6.0"
jupyter-websocket-client = "0.9.0"
kddbscan = "0.1.0"
kmeans_colors = "0.7.0"
kmedoids = "0.5.3"
krnl = "0.1.1"
latex = "0.3.1"
libc = "0.2.171"
linkify = "0.10.0"
linkme = "0.3.32"
livekit = "0.7.8"
llm-chain = "0.13.0"
log = "0.4.26"
lyon = "1.0.1"
markup5ever_rcdom = "0.3.0"
memchr = "2.7.4"
metaheuristics = "1.1.22"
miniquad = "0.4.8"
naga = "24.0.0"
nanoid = "0.4.0"
nbformat = "0.10.0"
ndarray = "0.16.1"
nix = "0.29.0"
num = "0.4.3"
num-format = "0.4.4"
num-traits = "0.2.19"
ocl = "0.19.7"
once_cell = "1.21.1"
ordered-float = "5.0.0"
oxigen = "2.2.2"
palette = "0.7.6"
parking_lot = "0.12.3"
pathdiff = "0.2.3"
pet = "0.0.1"
petgraph = "0.8.2"
piston2d-graphics = "0.45.0"
pixels = "0.15.0"
polars = "0.49.1"
postage = "0.5.0"
pretty_assertions = "1.4.1"
proc-macro2 = "1.0.94"
profiling = "1.0.16"
promptput = "0.1.1"
prost = "0.13.5"
prost-build = "0.13.5"
prost-types = "0.13.5"
pulldown-cmark = "0.13.0"
quantum = "0.1.2"
quote = "1.0.40"
rafx = "0.0.16"
rand = "0.9.0"
rand_core = "0.9.3"
rayon = "1.10.0"
rds = "0.0.3"
redis = "0.32.1"
regex = "1.11.1"
repair_json = "0.1.0"
reqwest = "0.12.15"
rettle = "2.0.0"
revonet = "0.2.1"
rotsprite = "0.1.4"
roulette-wheel = "0.2.2"
rsa = "0.9.8"
rsgenetic = "1.8.1"
rug = "1.27.0"
rurel = "0.6.0"
rusoto = "0.24.2"
rusq = "0.1.1"
rust-bert = "0.23.0"
rust-embed = "8.6.0"
rust2vec = "0.5.2"
rust_decimal = "1.37.1"
rustack = "0.1.0"
rustacuda = "0.1.3"
rustc-demangle = "0.1.24"
rustc-hash = "2.1.1"
rusticsom = "1.1.1"
rustls = "0.23.25"
rustls-platform-verifier = "0.5.1"
rusty-data = "0.0.3"
rusty-machine = "0.5.4"
schemars = "0.8.22"
sdl3 = "0.14.31"
semver = "1.0.26"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
serde_json_lenient = "0.2.4"
serde_repr = "0.1.20"
sha2 = "0.10.8"
shellexpand = "3.1.0"
shlex = "1.3.0"
sierra = "0.6.0"
signal-hook = "0.3.17"
simplelog = "0.12.2"
simplers_optimization = "0.4.3"
slsqp = "0.1.1"
smallvec = "1.14.0"
smartcore = "0.4.1"
smol = "2.0.2"
sprs = "0.11.3"
sqlformat = "0.3.5"
sqlx = "0.8.6"
streaming-iterator = "0.1.9"
strsim = "0.11.1"
strum = "0.27.1"
subtle = "2.6.1"
syn = "2.0.104"
sys-locale = "0.3.2"
sysinfo = "0.33.1"
take-until = "0.2.0"
tempfile = "3.19.1"
thin_main_loop = "0.2.0"
thiserror = "2.0.12"
three-d = "0.18.2"
tiktoken-rs = "0.6.0"
time = "0.3.40"
tiny-skia = "0.11.4"
tiny_http = "0.12.0"
tokenizers = "0.21.1"
tokio = "1.44.1"
toml = "0.8.20"
tower-http = "0.6.2"
tree-sitter-bash = "0.23.3"
tree-sitter-c = "0.23.4"
tree-sitter-cpp = "0.23.4"
tree-sitter-css = "0.23.2"
tree-sitter-elixir = "0.3.4"
tree-sitter-embedded-template = "0.23.2"
tree-sitter-gitcommit = "0.3.3"
tree-sitter-go = "0.23.4"
tree-sitter-parsers = "0.0.5"
typst = "0.13.1"
unicase = "2.8.1"
unicode-script = "0.5.7"
unicode-segmentation = "1.12.0"
unindent = "0.2.4"
url = "2.5.4"
urlencoding = "2.1.3"
uuid = "1.16.0"
vulkano = "0.35.1"
wasm-encoder = "0.227.1"
wasmparser = "0.227.1"
wasmtime = "31.0.0"
wasmtime-wasi = "31.0.0"
which = "7.0.2"
wit-component = "0.227.1"
zed_llm_client = "0.4.1"
zstd = "0.13.3"
